--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "node-welcome",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "privat": "true",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./index.js"
+    "start": "npx webpack server --open",
+    "build": "npx webpack --mode development"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,10 @@
   "homepage": "https://github.com/Antocha105/Node-welcome#readme",
   "dependencies": {
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
